# adler

./: Cargo.toml
modules/gitconfig/: .gitconfig  _module.yaml
src/: main.rs  module.rs
src/module/: file.rs
