[package]
name = "adler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
filetime = "0.2.16"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
simple_logger = { version = "2.1.0", features = ["colors"] }
